# nis2-model

./: .gitignore  Cargo.toml  README.md  expand_dataset.js  mcp_config.json  package-lock.json  package.json
.github/workflows/: pages.yml
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  routes.rs
crates/chat/: Cargo.toml
crates/chat/src/: cache.rs  dataset.rs  dataset_it.rs  dataset_it2.rs  dataset_it3.rs  dataset_it4.rs  dataset_it5.rs  dataset_legal.rs  dataset_ops.rs  dataset_scenarios.rs  engine.rs  lib.rs
crates/chat/src/it/: basics.rs  governance.rs  legal.rs  mod.rs  sectors.rs  tech_ops.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: chunk.rs  lib.rs  parser.rs  types.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/rules/: Cargo.toml
crates/rules/src/: adapters.rs  engine.rs  lib.rs  obligations.rs  schema.rs  validation.rs  wasm.rs
crates/rules/tests/: regression_tests.rs
crates/slm/: Cargo.toml
crates/slm/src/: grammar.rs  inference.rs  lib.rs  prompt.rs  report.rs  report_typst.rs
crates/vectordb/: Cargo.toml
crates/vectordb/src/: embed.rs  lance.rs  lib.rs  store.rs
data/sources/: dora_articles.json  nis2_articles.json
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: ChatBot.vue  ChatInput.vue  ChatMessages.vue  ChatWelcome.vue  Layout.vue  custom.css  formatter.js  glossary.js  glossary2.js  glossary3.js  i18n.js  search.js
docs/api/: cli.md  mcp-tools.md  rest.md  schemas.md
docs/architecture/: ingestion.md  mcp.md  overview.md  rules.md  slm.md  vectordb.md
docs/guide/: concepts.md  getting-started.md  overview.md
docs/legal/: disclaimer.md  incidents.md  obligations.md  privacy.md  sanctions.md  terms.md
docs/public/: dataset.json
