[package]
name = "nis2-api"
description = "REST API layer (axum) — HTTP interface to the compliance pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nis2-rules.workspace = true
nis2-vectordb.workspace = true
nis2-mcp-server.workspace = true
nis2-slm.workspace = true
