[package]
name = "nis2-mcp-server"
description = "Model Context Protocol server — exposes rule engine as MCP Tools via JSON-RPC"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
nis2-rules.workspace = true
