[package]
name = "nis2-rules"
description = "Deterministic rule engine — JSON Schema boolean trees for NIS2/DORA compliance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
schemars.workspace = true
jsonschema.workspace = true
extism.workspace = true
nis2-vectordb.workspace = true
