[package]
name = "nis2-rules"
description = "Deterministic rule engine — JSON Schema boolean trees for NIS2/DORA compliance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
schemars.workspace = true
jsonschema.workspace = true
utoipa = { version = "5", features = ["axum_extras"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
extism = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
