[package]
name = "nis2-slm"
description = "Local SLM inference with grammar-constrained generation (GGUF models)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
nis2-rules.workspace = true
